modify vote templates

--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -92,75 +92,7 @@
 		</div>
 		<div class="vote">
 			<h1><em></em>快速问答</h1>
-			<ul>
-				<li class="vote-new">
-					<span class="vote-img"><a href=""><img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt=""></a></span>
-					<span class="vote-txt">
-						<div class="title"><a href="">【生活】心情不好时会选择对谁倾诉？</a></div>
-						<p>众所周知，好友邀请是获取积分的途径之一，但是如何能让好友但是如何能让好友</p>
-						<div class="relate">
-							<span>发起人：王琳(恭喜获得<strong>200</strong>积分！) </span><span class="vline">|</span>
-							<span>参与人气：484</span>
-						</div>
-					</span>
-					<div><input type="hidden" name="timelimit_ut" value="1440777600" /><div id="countdown" class="countdown"></div></div>
-					<div class="tips expand-btn">
-						<span>?</span>
-						<div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p><b class="arrow"></b></div>
-					</div>
-				</li>
-				<li>
-					<span class="vote-img"><a href=""><img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt=""></a></span>
-					<span class="vote-txt">
-						<div class="title"><a href="">【生活】心情不好时会选择对谁倾诉？</a></div>
-						<p>众所周知，好友邀请是获取积分的途径之一，但是如何能让好友邀请变的更方便简洁，这是大家但是如何能让好友邀请变的更方便简洁</p>
-						<div class="relate">
-							<span>参与人气：484</span><span class="vline">|</span>
-							<span>截止日期：2015-07-25</span>
-						</div>
-					</span>
-					<a href="" class="survey-btn">去投票</a>
-				</li>
-				<li>
-					<span class="vote-img"><a href=""><img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt=""></a></span>
-					<span class="vote-txt">
-						<div class="title"><a href="">【生活】心情不好时会选择对谁倾诉？</a></div>
-						<p>众所周知，好友邀请是获取积分的途径之一，但是如何能让好友邀请变的更方便简洁，这是大家但是如何能让好友邀请变的更方便简洁</p>
-						<div class="relate">
-							<span>发起人：王琳(恭喜获得<strong>200</strong>积分！) </span><span class="vline">|</span>
-							<span>参与人气：484</span><span class="vline">|</span>
-							<span>截止日期：2015-07-25</span>
-						</div>
-					</span>
-					<a href="" class="survey-btn">去投票</a>
-				</li>
-				<li>
-					<span class="vote-img"><a href=""><img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt=""></a></span>
-					<span class="vote-txt">
-						<div class="title"><a href="">【生活】心情不好时会选择对谁倾诉？</a></div>
-						<p>众所周知，好友邀请是获取积分的途径之一，但是如何能让好友邀请变的更方便简洁，这是大家但是如何能让好友邀请变的更方便简洁</p>
-						<div class="relate">
-							<span>发起人：王琳(恭喜获得<strong>200</strong>积分！) </span><span class="vline">|</span>
-							<span>参与人气：484</span><span class="vline">|</span>
-							<span>截止日期：2015-07-25</span>
-						</div>
-					</span>
-					<a href="" class="survey-btn">去投票</a>
-				</li>
-				<li>
-					<span class="vote-img"><a href=""><img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt=""></a></span>
-					<span class="vote-txt">
-						<div class="title"><a href="">【生活】心情不好时会选择对谁倾诉？</a></div>
-						<p>众所周知，好友邀请是获取积分的途径之一，但是如何能让好友邀请变的更方便简洁，这是大家但是如何能让好友邀请变的更方便简洁</p>
-						<div class="relate">
-							<span>发起人：王琳(恭喜获得<strong>200</strong>积分！) </span><span class="vline">|</span>
-							<span>参与人气：484</span><span class="vline">|</span>
-							<span>截止日期：2015-07-25</span>
-						</div>
-					</span>
-					<a href="" class="survey-btn">去投票</a>
-				</li>
-			</ul>
+			{{ render(controller('JiliFrontendBundle:Vote:top' ) ) }}
 		</div>
 	</div>
 	<div class="main-con-right right">
