--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/result.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/result.html.twig
@@ -45,7 +45,7 @@
         </div>
         {{ render(controller('JiliFrontendBundle:Vote:recommend' ) ) }}
     </div>
-    {% include 'WenwenFrontendBundle:Vote:_vote_right.html.twig' %}
+    {% include 'WenwenFrontendBundle:Vote:_voteRight.html.twig' %}
 </div>
 {% endblock %}
 
