--- a/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
@@ -1,7 +1,7 @@
 {% extends '::adminBase.html.twig' %}
 
 {% block title %}
-{{ parent() }} - panel search
+{{ parent() }} - Panel Search
 {% endblock %}
 
 {% block stylesheets %}
@@ -12,7 +12,6 @@
 {% block javascripts %}
 {{ parent() }}
 <script src="{{ asset('js/My97DatePicker/WdatePicker.js') }}" type="text/javascript"></script>
-<script src="{{ asset('js/kindeditor/kindeditor.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block body%}
