add test for AdminPanelistController

--- a/app/Resources/views/pagination.html.twig
+++ b/app/Resources/views/pagination.html.twig
@@ -1,7 +1,7 @@
 <!--
     {% set total_  = total %}
 
-    <p>total: {{ total }}; total:{{ total }}</p>
+    <p>total: {{ total }}</p>
     <p>page_size: {{ page_size }}</p>
 
     {% set page_req = app.request.request.get('page') %}
