--- a/src/Jili/BackendBundle/Resources/views/Panelist/edit.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/edit.html.twig
@@ -32,7 +32,7 @@
     {% endfor %}
 {%endif%}
 
-<form action="{{ path('_admin_panelist_edit_confirm') }}" method="post" id="form1" }}>
+<form action="{{ path('_admin_panelist_edit_confirm') }}" method="post" id="form1" >
 
 <div class="float_left">
   <table>
