update password function

--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerTopBar.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerTopBar.html.twig
@@ -16,7 +16,7 @@
             </div>
             <ul>
                 <li><a href="{{ path('_user_info') }}">个人资料</a></li>
-                <li><a href="">账户设置</a></li>
+                <li><a href="{{ path('_profile_index') }}">账户设置</a></li>
                 <li><a href="{{ path('_user_adtaste',{'type':0}) }}">任务历史</a></li>
                 <li><a href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}">兑换历史</a></li>
                 <li><a href="{{ path('_user_logout') }}" class="exit">退出</a></li>
