--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -4,9 +4,9 @@
 {% block stylesheet %}
 <link href="{{ asset('css/index.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
- 
+
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -27,7 +27,7 @@
 						<li><label for="pwd">密码</label><input id="pwd" type="password"><span id="pwd_succeed"></span><span id="pwd_error"></span></li>
 						<li><label for="authcode">验证码</label><img src="{{ asset('img/home/identify.jpg') }}" alt="验证码"><span class="authcodeInput"><input id="authcode" type="text"><div class="change">换一张</div></span><span id="authcode_succeed"></span><span id="authcode_error"></span></li>
 					</ul>
-					<div class="login-btn" id="submit_button"><!-- <a href="home.html"> -->登录<!-- </a> --></div>
+					<div class="login-btn" id="submit_button"><a href="{{ path('_user_login') }}" title="登录">登录</a></div>
 					</form>
 					<p><a href="{{ path('_user_reset') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('_user_reg') }}">马上注册</a></p>
 					<div class="login-btn-others">
@@ -87,7 +87,7 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %}
 {% endblock %}
 
 {% block javascript %}
