delete PAG game notice

--- a/web/css/jl.ui.common.css
+++ b/web/css/jl.ui.common.css
@@ -653,64 +653,4 @@ a.tencent{
     width: 227px;
     height: 206px;
 }
-/* merge notice end /*/
-
-/* PAG close start */
-.popPAG{
-    width: 100%;
-    height: 180px;
-    margin: 0 auto;
-    position: fixed;
-    bottom: 0;
-    z-index: 9999;
-}
-.popPAG .popPAGWrap{
-    position: relative;
-    width: 100%;
-}
-.popPAG .popPAGWrap .popPAGBg{
-    width: 100%;
-    height: 128px;
-    background: #000;
-    position: absolute;
-    bottom: 0;
-    filter:alpha(opacity=80);     
-    -moz-opacity: 0.8;             
-    -khtml-opacity: 0.8;              
-    opacity: 0.8; 
-}
-.popPAG .popPAGWrap .popPAGBox{
-    width: 1134px;
-    height: 180px;
-    position: relative;
-    margin: 0 auto;
-    background: url(/images/notice/PAGclose.png) no-repeat 0px 2px;
-
-}
-.popPAG .popPAGWrap .popPAGBox .text{
-    width: 590px;
-    position: absolute;
-    left: 304px;
-    top: 122px;
-    text-align: left;
-}
-.popPAG .popPAGWrap .popPAGBox .text em{ 
-    color: #ffc000;
-}
-.popPAG .popPAGWrap .popPAGBox .closeTag{
-    width: 75px;
-    height: 75px;
-    position: absolute;
-    right: -21px;
-    top: 52px;
-    cursor: pointer;
-}
-.popPAG .popPAGWrap .popPAGBox .support{
-    width: 154px;
-    height: 76px;
-    position: absolute;
-    right: 75px;
-    top: 103px;
-    cursor: pointer;
-}
-/* PAG close end */
+/* merge notice end */
