--- a/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
@@ -15,7 +15,7 @@
 	<div class="main-help-feedback">
 		<div class="finished">
 			<p>感谢您的意见，我们的客服小问将根据您的问题，在24小时内联系您。</p>
-			<a href="{{ path('wenwen_frontend_home_home') }}">返回首页></a>
+			<a href="{{ path('_homepage') }}">返回首页></a>
 		</div>
 	</div>
 </div>
