--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerSimpleQ.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerSimpleQ.html.twig
@@ -1,8 +1,8 @@
 <div class="header">
 	<div class="header-nav">
 		<div class="w1000 clearfix">
-			<div class="logo left"><a href="{{ path('wenwen_frontend_home_index') }}" title="91问问调查网logo"><img src="{{ asset('img/common/logo.png') }}" alt="91问问调查网logo"></a></div>
-			<p class="right">如果问卷发生了什么问题请您<a target="_blank" href="{{ path('wenwen_frontend_help_feedback') }}">点击这里</a>告诉问问小编您的意见</p>
+			<div class="logo left"><a href="{{ path('_homepage') }}" title="91问问调查网logo"><img src="{{ asset('img/common/logo.png') }}" alt="91问问调查网logo"></a></div>
+			<p class="right">如果问卷发生了什么问题请您<a target="_blank" href="{{ path('_default_feedback') }}">点击这里</a>告诉问问小编您的意见</p>
 		</div>
 	</div>
 </div>
