--- a/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
@@ -12,16 +12,16 @@
 {% block body %}
 <div class="main-con w1000">
 	<div class="form main-register">
-		<form id="signup_form" action="/signup/profile" method="post" onsubmit="return false;">
+		<form action="{{ path('_user_reg') }}" name="form1" id="form1" method="post">
 		<input type="hidden" name="region_id" id="region_id" /><input type="hidden" name="_csrf_token" value="3e820125858940ba4c409723ac2e4a81" id="_csrf_token" /> 
 		<ul>
 			<li>
 				<label for="regName">昵称</label>
-				<div><input name="regName" id="regName" type="text" ><span id="regName_succeed" class="succeed"></span><span id="regName_error" class="msg_normal">请输入您的昵称</span></div>
+				<div><input name="regName" id="regName" type="text" value="{{ nick }}"><span id="regName_succeed" class="succeed"></span><span id="regName_error" class="msg_normal">请输入您的昵称</span></div>
 			</li>
 			<li>
 				<label for="email">电子邮件</label>
-				<div><input name="email" id="email" type="text"><span id="email_succeed" class="succeed"></span><span id="email_error" class="msg_normal">输入有误</span></div>
+				<div><input name="email" id="email" type="text" value="{{ email }}"><span id="email_succeed" class="succeed"></span><span id="email_error" class="msg_normal">输入有误</span></div>
 			</li>
 			<li>
 				<label for="pwd">设置密码</label>
@@ -34,8 +34,9 @@
 			<li id="vcode">
 				<label for="authcode">验证码</label>
 				<div><input name="authcode" id="authcode" type="text">
-				<img id="captcha" src="{{ asset('img/user/captcha.jpg') }}" alt="CAPTCHA Image" />
-				<img src="{{ asset('img/user/change.png') }}" alt="换一张" />
+				<!-- <img id="captcha" src="{{ asset('img/user/captcha.jpg') }}" alt="CAPTCHA Image" /> -->
+				<img id="verificationImg" class="verificationImg" name="captcha" onclick="this.src='{{  path('_user_captcha') }}?r='+100000*Math.random()" src="{{ path('_user_captcha') }}" />
+				<img id="changeCode" src="{{ asset('img/user/change.png') }}" alt="换一张"/>
 				<b>换一张</b>
 				<span id="authcode_succeed" class="succeed"></span><span id="authcode_error" class="msg"></span></div>
 			</li>
@@ -48,11 +49,11 @@
 				<span id="protocol_error"></span>
 			</li>
 		</ul>
-		<div class="main-register-btn"><span id="submit_button">注&nbsp;&nbsp;&nbsp;册</span><img src="{{ asset('img/user/regPoint.png') }}" alt=""></div>
+		<div class="main-register-btn"><span id="submit_button">注&nbsp;&nbsp;&nbsp;册</span><img src="{{ asset('img/user/regPoint.png') }}" alt="注册即送10积分"></div>
 		</form>
 		<div class="login-others">
 			<p>用第三方账号登录：</p>
-			<div class="login-others-btns"><a href=""><img src="{{ asset('img/common/sina_logo.png') }}" alt="微博登录">微博登录</a><a href=""><img src="{{ asset('img/common/qq_logo.png') }}" alt="QQ登录">QQ登录</a></div>
+			<div class="login-others-btns"><a href="{{ path('weibo_api_login') }}"><img src="{{ asset('img/common/sina_logo.png') }}" alt="微博登录">微博登录</a><a href="{{ path('qq_api_login') }}"><img src="{{ asset('img/common/qq_logo.png') }}" alt="QQ登录">QQ登录</a></div>
 		</div>
 	</div>
 </div>
