--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -168,10 +168,8 @@
 		}
 	}
 }
-.gameBanner{
-	margin: 15px 0;
-}
 .main-con-advertisement{
+	margin-top: 15px;
 	background: $block-bg-color;
 	border: $block-border;
 	.tabBtns{
