delete the phone module on the account's page

--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/account.html.twig
@@ -45,36 +45,8 @@
                                 <span id="pwdRepeat_error"></span>
                             </li>
                         </ul>
+                        <div class="backError"></div>
                         <div class="btn"><span id="pwd_save">保存</span></div>
-                        </form>
-                    </div>
-                </li>
-                <li>
-                    <a href="javascript:void(0)" class="edit">编辑</a>
-                    <label for="phoneNum">手机号码</label>
-                    <span class="default_value" id="phoneNum">13622458966</span>
-                    <div class="con form">
-                        <form action="">
-                        <ul>
-                            <li>
-                                <label for="curMobile">当前手机号码：</label>
-                                <span id="curMobile">13622458966</span>
-                            </li>
-                            <li>
-                                <label for="mobile">新手机号码：</label>
-                                <input type="text" id="mobile">
-                                <span id="send_code">发送验证码</span>
-                                <span id="mobile_succeed"></span>
-                                <span id="mobile_error"></span>
-                            </li>
-                            <li>
-                                <label for="authCode">请输入验证码：</label>
-                                <input type="text" id="authCode">
-                                <span id="authCode_succeed"></span>
-                                <span id="authCode_error"></span>
-                            </li>
-                        </ul>
-                        <div class="btn"><span id="mobile_save">保存</span></div>
                         </form>
                     </div>
                 </li>
