--- a/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
@@ -21,10 +21,10 @@
 					<li class="font16"><strong>注册登录</strong></li><li><a href="{{ path('_user_reg') }}" title="注册">注册</a></li><li><a href="{{ path('_user_login') }}" title="登录">登录</a></li><li><a href="{{ path('_user_login') }}" title="微博登录">微博登录</a></li><li><a href="{{ path('_user_reset') }}" title="忘记密码">忘记密码</a></li>
 				</ul>
 				<ul class="clearfix">
-					<li class="font16"><strong>个人中心</strong></li><li><a href="{{ path('_user_info') }}" title="个人资料">个人资料</a></li><li><a href="" title="账户设置">账户设置</a></li><li><a href="{{ path('_user_adtaste',{'type':0}) }}" title="任务历史">任务历史</a></li><li><a href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}" title="兑换历史">兑换历史</a></li><li></li><li><a href="{{ path('_user_message',{'sid': 1}) }}" title="我的消息">我的消息</a></li>
+					<li class="font16"><strong>个人中心</strong></li><li><a href="{{ path('_user_info') }}" title="个人资料">个人资料</a></li><li><a href="{{ path('_profile_index') }}" title="账户设置">账户设置</a></li><li><a href="{{ path('_user_adtaste',{'type':0}) }}" title="任务历史">任务历史</a></li><li><a href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}" title="兑换历史">兑换历史</a></li><li></li><li><a href="{{ path('_user_message',{'sid': 1}) }}" title="我的消息">我的消息</a></li>
 				</ul>
 				<ul class="clearfix">
-					<li class="font16"><strong>账户设置</strong></li><li><a href="" title="修改密码">修改密码</a></li><li><a href="" title="手机号码">手机号码</a></li><li><a href="" title="绑定设置">绑定设置</a></li><li><a href="" title="订退邮件">订退邮件</a></li><li></li><li><a href="" title="注销账户">注销账户</a></li>
+					<li class="font16"><strong>账户设置</strong></li><li><a href="{{ path('_profile_index') }}" title="修改密码">修改密码</a></li><li><a href="{{ path('_profile_index') }}" title="手机号码">手机号码</a></li><li><a href="{{ path('_profile_index') }}" title="绑定设置">绑定设置</a></li><li><a href="{{ path('_profile_index') }}" title="订退邮件">订退邮件</a></li><li></li><li><a href="" title="注销账户">注销账户</a></li>
 				</ul>
 			</div>
 			<div class="box">
