--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/_leftSideBar.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/_leftSideBar.html.twig
@@ -6,6 +6,6 @@
 		<li {{ router_current == '_user_message' ? 'class="active"':'' }}><a href="{{ path('_user_message',{'sid': 1}) }}"><em class="icon2"></em>我的消息</a></li>
 		<li {{ router_current == '_user_adtaste' ? 'class="active"':'' }}><a href="{{ path('_user_adtaste',{'type':0}) }}"><em class="icon3"></em>任务历史</a></li>
 		<li {{ router_current == '_user_exchange' ? 'class="active"':'' }}><a href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}"><em class="icon4"></em>兑换历史</a></li>
-		<li {{ router_current == '' ? 'class="active"':'' }}><a href="{{ path('_profile_index') }}"><em class="icon5"></em>账户设置</a></li>
+		<li {{ router_current == '_profile_index' ? 'class="active"':'' }}><a href="{{ path('_profile_index') }}"><em class="icon5"></em>账户设置</a></li>
 	</ul>
 </div>
