--- a/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/search.html.twig
@@ -123,7 +123,7 @@ $(function() {
         </td>
         <td align="left">{{ item.email}}</td>
         <td align="left">{{ item.birthday}}</td>
-        <td align="left">{{ item.sex == '1' ? 'male' : (item.sex == '2' ? 'female' : '') }}</td>
+        <td align="left">{{ item.sex == '1' ? 'ÄÐ' : (item.sex == '2' ? 'Å®' : '') }}</td>
         <td align="left">{{ item.nick}}</td>
         <td align="left">{{ item.tel is null ? '--' : item.tel}}</td>
         <td align="left">{{ item.registerDate | date("Y-m-d H:i:s") }}</td>
