--- a/web/sass/register.scss
+++ b/web/sass/register.scss
@@ -18,7 +18,7 @@
 			text-align: left;
 			color: #575757;
 		}
-		input[type='text'], input[type='password']{
+		input[type='text'], input[type='password'], input[type='email']{
 			width: 245px;
 			border: $input-border;
 			border-radius: 2px;
