--- a/web/sass/component/form.scss
+++ b/web/sass/component/form.scss
@@ -11,7 +11,7 @@
 			@include dib();
 		}
 	}
-	input[type='text'], input[type='password']{
+	input[type='text'], input[type='password'], input[type='email']{
 		padding: 0 5px;
 		height: 34px;
 		line-height: 34px;
