--- a/src/Jili/ApiBundle/Resources/views/Admin/memberEdit.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/memberEdit.html.twig
@@ -72,7 +72,7 @@ $(document).ready(function(){
     {% endfor %}
 {% endif %}
 
-<input type="submit" id="edit" name="edit" value="编辑" style="margin-left: 10%;"/>
+<input type="submit" id="edit" name="edit" value="更新" style="margin-left: 5%;"/>
 
 </BODY>
 </HTML>
