--- a/src/Jili/BackendBundle/Resources/views/Panelist/editConfirm.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/editConfirm.html.twig
@@ -13,12 +13,9 @@
 {% endblock %}
 
 {% block body%}
-
+<div class="panelist">
 <h1>confirm edit panelist</h1>
-
-
-<div class="float_left">
-  <table>
+  <table class="inputForm">
   <tr>
     <th>PID</th>
     <td>{{ user.id }}</td>
@@ -102,6 +99,5 @@
 </div>
 
 </form>
-
-
+</div>
 {% endblock %}
