--- a/src/Jili/BackendBundle/Resources/views/Panelist/pointhistory.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Panelist/pointhistory.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}
 {{parent() }}
-<link href="{{ asset('css/pagenav.css') }}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/pageNav.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block javascripts %}
