--- a/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
@@ -12,26 +12,37 @@
 {% block body %}
 <div class="main-con w1000">
 	<div class="form main-register">
-		<form action="{{ path('_user_reg') }}" name="signup-form" id="signup_form" method="post">
+		<form action="{{ path('_user_reg') }}" name="signup_form" id="signup_form" method="post">
 		<ul>
 			<li>
 			   {{ form_label(form.nickname ) }}
-				<div>{{ form_widget(form.nickname ) }}<span id="signup_nickname_succeed" class="succeed"></span><span id="signup_nickname_error" class="msg_normal">请输入您的昵称</span></div>
+				<div>{{ form_widget(form.nickname ) }}
+                  <span id="signup_nickname_succeed" class="succeed"></span>
+                  <span id="signup_nickname_error" class="msg_normal">请输入您的昵称</span>
+                   {{ form_errors(form.nickname) }}
+                </div>
+<!-- p '' -->
 			</li>
 			<li>
 				{{ form_label(form.email) }}
 				<div> {{ form_widget(form.email ) }}
-<!-- input name="email" id="email" type="text" value=""-->
-<span id="signup_email_succeed" class="succeed"></span><span id="signup_email_error" class="msg_normal">输入有误</span></div>
+                    <span id="signup_email_succeed" class="succeed"></span>
+                    <span id="signup_email_error" class="msg_normal">输入有误</span>
+                   {{ form_errors(form.email) }}
+                </div>
 			</li>
 			<li>
 				{{ form_label(form.password.first) }}
 {# <input name="pwd" id="pwd" type="password"> #}
-				<div>{{ form_widget(form.password.first)}}<span class="hide" id="pwdStrength"><em class="fl">安全程度：</em><b class="c1">弱</b><b>中</b><b>强</b></span><span id="signup_password_first_succeed" class="succeed"></span><span id="signup_password_first_error" class="msg"></span></div>
+				<div>{{ form_widget(form.password.first)}}<span class="hide" id="pwdStrength"><em class="fl">安全程度：</em><b class="c1">弱</b><b>中</b><b>强</b></span><span id="signup_password_first_succeed" class="succeed"></span><span id="signup_password_first_error" class="msg"></span>
+                   {{ form_errors(form.password.first) }}
+                </div>
 			</li>
 			<li>
 				{{ form_label(form.password.second) }}
-				<div>{{ form_widget(form.password.second )}}<span id="singup_password_second_succeed" class="succeed"></span><span id="singup_password_second_error" class="msg"></span></div>
+				<div>{{ form_widget(form.password.second )}}<span id="signup_password_second_succeed" class="succeed"></span><span id="signup_password_second_error" class="msg"></span>
+                   {{ form_errors(form.password.second) }}
+                </div>
 			</li>
 			<li id="vcode">
 				{{ form_label(form.captcha) }}
@@ -42,6 +53,7 @@
 				<b>换一张</b>
 -->
 				<span id="signup_captcha_succeed" class="succeed"></span><span id="signup_captcha_error" class="msg"></span>
+                    {{ form_errors(form.captcha) }}
                 </div>
 			</li>
 			<li>
