new guide after register

--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -100,6 +100,28 @@
 		<div class="weibo"><iframe width="230" height="580" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=230&height=580&fansRow=2&ptype=1&speed=0&skin=5&isTitle=1&noborder=0&isWeibo=1&isFans=0&uid=1752291082&verifier=37e3a3a3&dpc=1"></iframe></div>
 	</div>
 </div>
+{# 新手引导开始 #}
+<div id="mask"></div>
+<div id="newguideWrap">
+	<div class="newguide1">
+		<div>
+			<a class="ngbtn ngbtn1"></a>
+			<a class="ngclose ngclose1"></a>
+		</div>
+	</div>
+	<div class="newguide2">
+		<div>
+			<a class="ngbtn ngbtn2"></a>
+			<a class="ngclose ngclose2"></a>
+		</div>
+	</div>
+	<div class="newguide3">
+		<div>
+			<a class="ngbtn ngbtn3"></a>
+		</div>
+	</div>
+</div>
+{# 新手引导结束 #}
 {% endblock %}
 
 {% block footer %}
