--- a/web/css/home.css
+++ b/web/css/home.css
@@ -572,6 +572,79 @@ body {
     *display: inline;
     *zoom: 1; }
 
+#mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: #000;
+  filter: alpha(opacity=70);
+  -moz-opacity: 0.7;
+  -khtml-opacity: 0.7;
+  opacity: 0.7;
+  z-index: 9999; }
+
+#newguideWrap {
+  width: 1000px;
+  min-height: 1000px;
+  position: relative;
+  margin: 0 auto;
+  z-index: 10000; }
+  #newguideWrap .newguide1 {
+    width: 881px;
+    height: 407px;
+    position: absolute;
+    background: url(../img/home/guide1.png) no-repeat 0 0;
+    left: 32px;
+    top: 433px; }
+  #newguideWrap .newguide2 {
+    width: 520px;
+    height: 379px;
+    position: absolute;
+    background: url(../img/home/guide2.png) no-repeat 0 0;
+    right: 58px;
+    top: 9px; }
+  #newguideWrap .newguide3 {
+    width: 493px;
+    height: 369px;
+    position: absolute;
+    background: url(../img/home/guide3.png) no-repeat 0 0;
+    right: -9px;
+    top: 10px; }
+  #newguideWrap .newguide1 div, #newguideWrap .newguide2 div, #newguideWrap .newguide3 div {
+    width: 100%;
+    height: 100%;
+    position: relative; }
+  #newguideWrap .ngbtn {
+    position: absolute;
+    width: 120px;
+    height: 70px;
+    cursor: pointer; }
+  #newguideWrap .ngbtn1 {
+    right: 69px;
+    bottom: 71px; }
+  #newguideWrap .ngbtn2 {
+    right: 69px;
+    bottom: -3px; }
+  #newguideWrap .ngbtn3 {
+    right: 1px;
+    bottom: -3px; }
+  #newguideWrap .ngclose {
+    position: absolute;
+    width: 67px;
+    height: 34px;
+    cursor: pointer; }
+  #newguideWrap .ngclose1 {
+    right: 0;
+    bottom: 78px; }
+  #newguideWrap .ngclose2 {
+    right: 0;
+    bottom: -1px; }
+
+#mask, #newguideWrap, #newguideWrap .newguide1, #newguideWrap .newguide2, #newguideWrap .newguide3 {
+  display: none; }
+
 .footer {
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
@@ -655,3 +728,5 @@ body {
         background-position: 0 -18px; }
       .footer .footer-con-right .goTop:hover span {
         background-position: -19px -18px; }
+
+/*# sourceMappingURL=home.css.map */
