--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -95,4 +95,89 @@ $slider-height: 305px;
 		}
 	}
 }
+
+#mask{ 
+	position: absolute; 
+	width: 100%; 
+	height: 100%; 
+	left: 0; 
+	top: 0; 
+	background: #000; 
+	filter:alpha(opacity=70); 
+	-moz-opacity:0.7; 
+	-khtml-opacity:0.7; 
+	opacity: 0.7;
+	z-index: 9999;
+}
+#newguideWrap {
+	width: 1000px;
+	min-height: 1000px;
+	position: relative;
+	margin: 0 auto;
+	z-index: 10000;
+	.newguide1{
+		width: 881px;
+		height: 407px;
+		position: absolute;
+		background: url(../img/home/guide1.png) no-repeat 0 0;
+		left: 32px;
+	    top: 433px;
+	}
+	.newguide2{
+		width: 520px;
+		height: 379px;
+		position: absolute;
+		background: url(../img/home/guide2.png) no-repeat 0 0;
+		right: 58px;
+	    top: 9px;
+	}
+	.newguide3{
+		width: 493px;
+		height: 369px;
+		position: absolute;
+		background: url(../img/home/guide3.png) no-repeat 0 0;
+		right: -9px;
+	    top: 10px;
+	}
+	.newguide1 div, .newguide2 div, .newguide3 div{
+		width: 100%;
+	    height: 100%;
+		position: relative;
+	}
+	.ngbtn{
+		position: absolute;
+		width: 120px;
+	    height: 70px;
+	    cursor: pointer;
+	}
+	.ngbtn1{
+		right: 69px;
+	    bottom: 71px;
+	}
+	.ngbtn2{
+		right: 69px;
+	    bottom: -3px;
+	}
+	.ngbtn3{
+		right: 1px;
+	    bottom: -3px;
+	}
+	.ngclose{
+		position: absolute;
+		width: 67px;
+	    height: 34px;
+	    cursor: pointer;
+	}
+	.ngclose1{
+		right: 0;
+	    bottom: 78px;
+	}
+	.ngclose2{
+		right: 0;
+	    bottom: -1px;
+	}
+}
+#mask, #newguideWrap, #newguideWrap .newguide1, #newguideWrap .newguide2, #newguideWrap .newguide3{
+	display: none;
+}
 @import "layout/footer";
